[KAN-15]: Add swagger information & adjust makefile command
