# Backend/docs/swagger.yaml
@@ -1,7 +1,24 @@
 basePath: /
 definitions:
-  dto.CreateUserRequest:
+  dto.LoginRequest:
     properties:
+      email:
+        example: john.doe@example.com
+        type: string
+      password:
+        example: SecurePass123!
+        minLength: 8
+        type: string
+    required:
+    - email
+    - password
+    type: object
+  dto.RegisterRequest:
+    properties:
+      confirmedPassword:
+        example: SecurePass123!
+        minLength: 8
+        type: string
       dob:
         example: "1990-05-15"
         type: string
@@ -24,6 +41,7 @@ definitions:
         - $ref: '#/definitions/users.Role'
         example: patient
     required:
+    - confirmedPassword
     - dob
     - email
     - gender
@@ -63,23 +81,23 @@ info:
   title: Remote Patient Monitoring API
   version: "1.0"
 paths:
-  /users:
+  /auth/login:
     post:
       consumes:
       - application/json
-      description: Create a new user with the provided information
+      description: Authenticate a user and return a JWT token
       parameters:
-      - description: User information
+      - description: User login credentials
         in: body
-        name: user
+        name: credentials
         required: true
         schema:
-          $ref: '#/definitions/dto.CreateUserRequest'
+          $ref: '#/definitions/dto.LoginRequest'
       produces:
       - application/json
       responses:
-        "201":
-          description: User created successfully
+        "200":
+          description: User logged in successfully
           schema:
             additionalProperties: true
             type: object
@@ -89,15 +107,38 @@ paths:
             additionalProperties:
               type: string
             type: object
-        "500":
-          description: Internal server error
+      summary: Login a user
+      tags:
+      - auth
+  /auth/register:
+    post:
+      consumes:
+      - application/json
+      description: Register a new user with the provided details
+      parameters:
+      - description: User registration details
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/dto.RegisterRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: User registered successfully
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad request
           schema:
             additionalProperties:
               type: string
             type: object
-      summary: Create a new user
+      summary: Register a new user
       tags:
-      - users
+      - auth
   /users/{id}:
     get:
       consumes:
